# mag_dist

./: 3d2n less 15  CMakeLists.txt  README.md  backUp  bliss_uses  main.cpp  steady_clock  tasks.md  tasks.txt
example/: f-vector.cpp
example/4d/: 4poly.cpp  CMakeLists.txt
example/4d/input_file/: all4d2n.txt  all4polytopes5vertices.txt  all4polytopes5vertices.txt.out  all4polytopes6vertices.txt  all4polytopes6vertices.txt.out  all4polytopes7vertices.txt.out  all4polytopes8vertices.txt  all4polytopes8vertices.txt.out
example/4d/skeleton/src/: ddm.hpp  ddmio.hpp
example/5d/: CMakeLists.txt  f-vector.cpp  n8d5.txt
example/5d/input_file/: polytope_n6d5.txt  polytope_n6d5.txt.fvec  polytope_n7d5.txt  polytope_n7d5.txt.fvec  polytope_n8d5.txt  polytope_n8d5.txt.fvec
example/expected_result/: neighborly5_4inscribed.txt  neighborly6_4inscribed.txt  neighborly7_4inscribed.txt  neighborly8_4inscribed.txt  neighborly9_4inscribed.txt
example/skeleton/examples/: runexamples.bat
example/skeleton/msvs/: skeleton.sln
example/skeleton/src/: ddm.hpp  ddmio.hpp  skeleton.cpp
generate_table/: CMakeLists.txt
headers/: incidence_matrix.hpp
implementation/: incidence_matrix.cpp
incidence-matrix/: incidence_matrix.cpp
incidence_matrix/: incidence_matrix.cpp  incidence_matrix.hpp
input_files/: 3d.txt  4d.txt  4d2sc.txt  4d_temp.txt  5d.txt  5d_temp.txt  5d_temp_no_format.txt  convert_5d.py
input_files/temp/: 4d_temp.txt  5d_temp.txt  polytope_n6d5.txt.fvec  polytope_n7d5.txt.fvec  polytope_n8d5.txt.fvec  polytope_n9d5.txt.fvec
libs/bliss/bliss/: bliss_C.h  graph.hh  timer.hh
re_src/: 3d2sc.txt  4d2n.txt
result/: Generation 2n from one matrix  d5 to d6 f less 13 v 10  d5 to d6 less 13
result/3d2sp to 4d2n less 14/: full_time  result.txt  time0  time1  time2  time3  time4  time5  time6  time7  time8  time9
result/3d2sp to 4d2n less 15/: full_time  result.txt  time0  time1  time2  time3  time4  time5  time6  time7  time8  time9
result/4d to 5d less 12/: full_time  result.txt  time0  time1  time10  time11  time12  time13  time14  time15  time2  time3  time4  time5  time6  time7  time8  time9
result/d5 to d6/: all_gen_6d_less14.txt  full_time_f_max14_v6.txt  full_time_f_max14_v7.txt  full_time_f_max14_v8.txt  full_time_f_max14_v9.txt  result_f_max14_v7.txt  result_f_max14_v8.txt  result_f_max14_v9.txt
result/del copy/: 3d_to_4d_less_14.txt  4d_to_5d_less_12.txt  5d_to_6d_less_14f_v10.txt  all_gen_6d_less14.txt  result_f_max14_v8.txt  result_f_max14_v9.txt
result/no in logs/: full_time4d_f_max14_v5.txt  full_time4d_f_max14_v6.txt  full_time4d_f_max14_v7.txt  full_time5d_f_max12_v6.txt  full_time5d_f_max12_v7.txt  full_time5d_f_max12_v8.txt  full_time6d_f_max14_v10.txt  full_time6d_f_max14_v7.txt  full_time6d_f_max14_v8.txt  full_time6d_f_max14_v9.txt  full_time6d_f_max15_v9.txt
src/: generate_table.cpp  generate_table.h  main.cpp  temp  test.h
src/headers/: Checker.h  Chekcer.h  GenerationCombinations.h  GenerationIncidenceMatrix.h  GenerationPolyhedron.h  IncidenceMatrix.h  Logs.h  Polyhedron.h  Timer.h  incidence_matrix.hpp
src/implementation/: Checker.cpp  Chekcer.cpp  GenerationCombinations.cpp  GenerationIncidenceMatrix.cpp  GenerationPolyhedron.cpp  IncidenceMatrix.cpp  Logs.cpp  Polyhedron.cpp  Timer.cpp  incidence_matrix.cpp
tables/: 3d2n.txt  3d2sc.txt  3d2sp to 4d2n less 14  4d to 5d less 12  4d2n.txt  4d2sc.txt  5d2n.txt  5d2sc.txt  5d_to_6d_less14.txt
test/: CMakeLists.txt  test.txt
tools/bliss/: CMakeLists.txt
tools/generate_table/: CMakeLists.txt  generate_table.cpp  main.cpp
tools/test/: CMakeLists.txt  main.cpp  test.cpp
(+17 files in other folders)
